Updated Charles talk title, added Meetup button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Laravel Louisville
 ---
 
+<a class="fat-button" href="http://www.meetup.com/Laravel-Louisville">Join Us!</a>
+
 <h3>February Meetup</h3>
 
 <p><strong>When it is</strong></p>
@@ -16,8 +18,8 @@ title: Laravel Louisville
     <li><span class="time">6:00</span> Arrive, grab some pizza and a drink</li>
     <li><span class="time">6:10</span> <a href="https://github.com/brianwebb01">Brian Webb</a> "Welcome &amp; Vision for this Group"</li>
     <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> "Your First Laravel App"&mdash;Beginner Ignite Talk</li>
-    <li><span class="time">6:30</span> <a href=""></a> Charles Griffin "Interfaced Out"&mdash;Intermediate Ignite Talk</li>
-    <li><span class="time">6:45</span> <a href=""></a>John Arstingstall "Service Providers, Facades, and the Ioc Container"&mdash;Advanced Ignite Talk</li>
+    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> "Fearless Polymorphism"&mdash;Intermediate Ignite Talk</li>
+    <li><span class="time">6:45</span> <a href="https://twitter.com/jarstingstall">John Arstingstall</a> "Service Providers, Facades, and the Ioc Container"&mdash;Advanced Ignite Talk</li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
 
