--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@ layout: default
 title: Laravel Louisville
 ---
 
-<a class="fat-button" href="http://www.meetup.com/Laravel-Louisville">Join Us!</a>
+<p><strong>Who we are</strong></p>
+<p>We're a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3>February Meetup</h3>
+<h3 class="section-title">February Meetup</h3>
 
-<p><strong>When it is</strong></p>
+<p><strong>When is it?</strong></p>
 <p>Wednesday, February 19, 2014 from 6:00 PM to 8:00 PM</p>
 
-<p><strong>Where it is</strong></p>
+<p><strong>Where is it?</strong></p>
 <p>iHub <a href="https://www.google.com/maps/dir//204+S+Floyd+St,+Louisville,+KY+40202/@38.253777,-85.748444,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x886972b8e377c25b:0xd6ae4f43098b929b!2m2!1d-85.748444!2d38.253777" target="_blank">204 South Floyd Street, Louisville, KY</a></p>
 
 <p><strong>The schedule</strong></p>
 <ul class="schedule">
     <li><span class="time">6:00</span> Arrive, grab some pizza and a drink</li>
     <li><span class="time">6:10</span> <a href="https://github.com/brianwebb01">Brian Webb</a> "Welcome &amp; Vision for this Group"</li>
-    <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> "Your First Laravel App"&mdash;Beginner Ignite Talk</li>
-    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> "Fearless Polymorphism"&mdash;Intermediate Ignite Talk</li>
-    <li><span class="time">6:45</span> <a href="https://twitter.com/jarstingstall">John Arstingstall</a> "Service Providers, Facades, and the Ioc Container"&mdash;Advanced Ignite Talk</li>
+    <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> "Your First Laravel App" &mdash; Beginner Ignite Talk</li>
+    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> "Fearless Polymorphism" &mdash; Intermediate Ignite Talk</li>
+    <li><span class="time">6:45</span> <a href="https://twitter.com/jarstingstall">John Arstingstall</a> "Service Providers, Facades, and the Ioc Container" &mdash; Advanced Ignite Talk</li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
 
-<!--<iframe width="225" height="570" src="http://meetu.ps/2bDy4Y" frameborder="0"></iframe>-->
-
+<a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 
 <!--
 <div id="home">
