changed johns talk title, replaced github ribbon with text link, added some responsive styles for hero

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Laravel Louisville
 ---
 
 <p><strong>Who we are</strong></p>
-<p>We're a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
+<p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
 <h3 class="section-title">February Meetup</h3>
 
@@ -15,12 +15,13 @@ title: Laravel Louisville
 <p>iHub <a href="https://www.google.com/maps/dir//204+S+Floyd+St,+Louisville,+KY+40202/@38.253777,-85.748444,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x886972b8e377c25b:0xd6ae4f43098b929b!2m2!1d-85.748444!2d38.253777" target="_blank">204 South Floyd Street, Louisville, KY</a></p>
 
 <p><strong>The schedule</strong></p>
+
 <ul class="schedule">
     <li><span class="time">6:00</span> Arrive, grab some pizza and a drink</li>
-    <li><span class="time">6:10</span> <a href="https://github.com/brianwebb01">Brian Webb</a> "Welcome &amp; Vision for this Group"</li>
-    <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> "Your First Laravel App" &mdash; Beginner Ignite Talk</li>
-    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> "Fearless Polymorphism" &mdash; Intermediate Ignite Talk</li>
-    <li><span class="time">6:45</span> <a href="https://twitter.com/jarstingstall">John Arstingstall</a> "Service Providers, Facades, and the Ioc Container" &mdash; Advanced Ignite Talk</li>
+    <li><span class="time">6:10</span> <a href="https://github.com/brianwebb01">Brian Webb</a> &ldquo;Welcome &amp; Vision for this Group&rdquo;</li>
+    <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> &ldquo;Your First Laravel App&rdquo; &mdash; Beginner Ignite Talk</li>
+    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> &ldquo;Fearless Polymorphism&rdquo; &mdash; Intermediate Ignite Talk</li>
+    <li><span class="time">6:45</span> <a href="https://github.com/jarstingstall">John Arstingstall</a> &ldquo;Laravel Architecture - Part 1: The IoC Container&rdquo; &mdash; Advanced Ignite Talk</li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
 
