--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">February Meetup</h3>
+<h3 class="section-title">March Meetup</h3>
 
 <p><strong>When is it?</strong></p>
-<p>Wednesday, February 19, 2014 from 6:00 PM to 8:00 PM</p>
+<p>Wednesday, March 19, 2014 from 6:00 PM to 8:00 PM</p>
 
 <p><strong>Where is it?</strong></p>
 <p>iHub <a href="https://www.google.com/maps/dir//204+S+Floyd+St,+Louisville,+KY+40202/@38.253777,-85.748444,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x886972b8e377c25b:0xd6ae4f43098b929b!2m2!1d-85.748444!2d38.253777" target="_blank">204 South Floyd Street, Louisville, KY</a></p>
@@ -17,15 +17,55 @@ title: Laravel Louisville
 <p><strong>The schedule</strong></p>
 
 <ul class="schedule">
-    <li><span class="time">6:00</span> Arrive, grab some pizza and a drink</li>
-    <li><span class="time">6:10</span> <a href="https://github.com/brianwebb01">Brian Webb</a> &ldquo;Welcome &amp; Vision for this Group&rdquo;</li>
-    <li><span class="time">6:15</span> <a href="https://github.com/troyharvey">Troy Harvey</a> &ldquo;Your First Laravel App&rdquo; &mdash; Beginner Ignite Talk</li>
-    <li><span class="time">6:30</span> <a href="https://github.com/cegrif01">Charles Griffin</a> &ldquo;Fearless Polymorphism&rdquo; &mdash; Intermediate Ignite Talk</li>
-    <li><span class="time">6:45</span> <a href="https://github.com/jarstingstall">John Arstingstall</a> &ldquo;Laravel Architecture - Part 1: The IoC Container&rdquo; &mdash; Advanced Ignite Talk</li>
+    <li>
+      <span class="time">6:00</span> Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:15</span>
+      <a href="https://github.com/brianwebb01">Brian Webb</a>
+      &ldquo;Architecture by Numbers &mdash; Feature Architecture for Software Engineers&rdquo;
+    </li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
 
-<a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+<aside class="meetup">
+  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+</aside>
+
+<h3 class="section-title">February Meetup &mdash; Feb. 19th, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:00</span> Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:10</span>
+      <a href="https://github.com/brianwebb01">Brian Webb</a>
+      &ldquo;Welcome &amp; Vision for this Group&rdquo;
+    </li>
+    <li>
+      <span class="time">6:15</span>
+      <a href="https://github.com/troyharvey">Troy Harvey</a>
+      &ldquo;Your First Laravel App&rdquo;
+      &mdash; Beginner
+      &mdash; <a href="https://vimeo.com/88905437">Video</a>
+      <a href="https://github.com/troyharvey/cellar">Source</a>
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/cegrif01">Charles Griffin</a>
+      &ldquo;Fearless Polymorphism&rdquo;
+      &mdash; Intermediate
+      &mdash; <a href="https://vimeo.com/88905437">Video</a>
+    </li>
+    <li>
+      <span class="time">6:45</span>
+      <a href="https://github.com/jarstingstall">John Arstingstall</a>
+      &ldquo;Laravel Architecture - Part 1: The IoC Container&rdquo; &mdash; Advanced
+      &mdash; <a href="https://vimeo.com/88888213">Video</a>
+    </li>
+    <li><span class="time">7:00</span> Open Discussion</li>
+</ul>
 
 <!--
 <div id="home">
