--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">March Meetup</h3>
+<h3 class="section-title">April Meetup</h3>
 
 <p><strong>When is it?</strong></p>
-<p>Wednesday, March 19, 2014 from 6:00 PM to 8:00 PM</p>
+<p>Wednesday, April 19, 2014 from 6:00 PM to 8:00 PM</p>
 
 <p><strong>Where is it?</strong></p>
 <p>iHub <a href="https://www.google.com/maps/dir//204+S+Floyd+St,+Louisville,+KY+40202/@38.253777,-85.748444,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x886972b8e377c25b:0xd6ae4f43098b929b!2m2!1d-85.748444!2d38.253777" target="_blank">204 South Floyd Street, Louisville, KY</a></p>
@@ -21,16 +21,36 @@ title: Laravel Louisville
       <span class="time">6:00</span> Arrive, grab some pizza and a drink
     </li>
     <li>
-      <span class="time">6:15</span>
-      <a href="https://github.com/brianwebb01">Brian Webb</a>
-      &ldquo;Architecture by Numbers &mdash; Feature Architecture for Software Engineers&rdquo;
+      <span class="time">6:30</span>
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;Dispatcher - A Package for Scheduling Artisan Commands&rdquo;
     </li>
-    <li><span class="time">7:00</span> Open Discussion</li>
+    <li>
+      <span class="time">7:00</span>
+      <a href="https://github.com/kyleferguson">Kyle Ferguson</a>
+      Topic TBD
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
 
 <aside class="meetup">
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
+
+<h3 class="section-title">March Meetup &mdash; Mar. 19th, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:00</span> Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/brianwebb01">Brian Webb</a>
+      &ldquo;Indatus Open Source &mdash; Some Indatus Packages that Ignite Laravel&rdquo;
+      &mdash; <a href="https://github.com/laravel-louisville/2014-03-20_Brian_Webb_OSS_Packages">Source</a>
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
 
 <h3 class="section-title">February Meetup &mdash; Feb. 19th, 2014</h3>
 
