Updating the April talk titles

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ title: Laravel Louisville
     <li>
       <span class="time">6:30</span>
       <a href="https://github.com/bkuhl">Ben Kuhl</a>
-      &ldquo;Dispatcher - A Package for Scheduling Artisan Commands&rdquo;
+      &ldquo;Scheduling Artisan Commands with <a href="https://github.com/Indatus/dispatcher/">Dispatcher</a>&rdquo;
     </li>
     <li>
       <span class="time">7:00</span>
       <a href="https://github.com/kyleferguson">Kyle Ferguson</a>
-      Topic TBD
+      &ldquo;Full stack behavior driven development with <a href="http://behat.org/">behat</a> and <a href="http://www.phpspec.net/">phpspec</a>&rdquo;
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
