June meetup details

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">May Meetup</h3>
+<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup</h3>
 
 <p><strong>When is it?</strong></p>
-<p>Wednesday, May 21, 2014 from 6:00 PM to 8:00 PM</p>
+<p>{{ site.next_meetup | date: "%A, %B %-d, %Y" }} from 6:00 PM to 8:00 PM</p>
 
 <p><strong>Where is it?</strong></p>
-<p>iHub <a href="https://www.google.com/maps/dir//204+S+Floyd+St,+Louisville,+KY+40202/@38.253777,-85.748444,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x886972b8e377c25b:0xd6ae4f43098b929b!2m2!1d-85.748444!2d38.253777" target="_blank">204 South Floyd Street, Louisville, KY</a></p>
+<p>iHub <a href="https://www.google.com/maps/@38.255946,-85.750439,3a,75y,216.95h,100.99t/data=!3m4!1e1!3m2!1sfx1tp4l-VKSdxRAkHMgYXQ!2e0" target="_blank">118 E Main St, Louisville, KY</a></p>
 
 <p><strong>The schedule</strong></p>
 
@@ -25,7 +25,12 @@ title: Laravel Louisville
       <a href="https://github.com/indatus">Indatus Software Engineering Team</a>
       &ldquo;Highlights from <a href="https://conference.laravel.com/">Laracon</a> 2014&rdquo;
     </li>
-    <li><span class="time">7:30</span> Open Discussion</li>
+    <li>
+      <span class="time">7:00</span>
+      <a href="https://github.com/kyleferguson">Kyle Ferguson</a>
+      &ldquo;Intro to Hack&rdquo;
+    </li>
+    <li><span class="time">8:00</span> Open Discussion</li>
 </ul>
 
 <aside class="meetup">
