--- a/index.html
+++ b/index.html
@@ -22,8 +22,46 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
-      <a href="https://github.com/indatus">Indatus Software Engineering Team</a>
-      &ldquo;Highlights from <a href="https://conference.laravel.com/">Laracon</a> 2014&rdquo;
+      <a href="http://about.me/chris_flynn">Chris Flynn</a>
+      &ldquo;Laravel Package Highlights&rdquo;
+    </li>
+    <li>
+      <span class="time">7:00</span>
+      <a href="">TBD</a>
+    </li>
+    <li><span class="time">8:00</span> Open Discussion</li>
+</ul>
+
+<aside class="meetup">
+  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+</aside>
+
+<h3 class="section-title">July Meetup &mdash; Jul. 23rd, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/cegrif01">Charles Griffin</a>
+      &ldquo;<a href="http://chartjs.org">chart.js</a> and a Query Builder Filter Factory&rdquo;
+      &mdash; <a href="https://gist.github.com/anonymous/c149249e08d121811e80">Notes</a>
+    </li>
+    <li>
+      <span class="time">7:00</span>
+      <a href="https://github.com/brianwebb01">Brian Webb</a>
+      &ldquo;Laravel Tips and Package Pro-tips&rdquo;
+      &mdash; <a href="https://gist.github.com/anonymous/c149249e08d121811e80">Notes</a>
+    </li>
+    <li><span class="time">8:00</span> Open Discussion</li>
+</ul>
+
+<h3 class="section-title">June Meetup &mdash; Jun. 25th, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/indatus">Troy Harvey</a>
+      &ldquo;Highlights from <a href="https://conference.laravel.com/">Laracon</a> NYC&rdquo;
+      &mdash; <a href="http://blog.troyharvey.com/post/89698876341/nuggets-laracon-nyc-2014">Links</a>
     </li>
     <li>
       <span class="time">7:00</span>
@@ -32,10 +70,6 @@ title: Laravel Louisville
     </li>
     <li><span class="time">8:00</span> Open Discussion</li>
 </ul>
-
-<aside class="meetup">
-  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
-</aside>
 
 <h3 class="section-title">April Meetup &mdash; Apr. 19th, 2014</h3>
 
