--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Laravel Louisville
     <li>
       <span class="time">6:30</span>
       <a href="http://about.me/chris_flynn">Chris Flynn</a>
-      &ldquo;Laravel Package Highlights&rdquo;
+      &ldquo;Aspect Oriented Architecture in Laravel&rdquo;
     </li>
     <li>
       <span class="time">7:00</span>
