--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Laravel Louisville
 <p>{{ site.next_meetup | date: "%A, %B %-d, %Y" }} from 6:00 PM to 8:00 PM</p>
 
 <p><strong>Where is it?</strong></p>
-<p>iHub <a href="https://www.google.com/maps/@38.255946,-85.750439,3a,75y,216.95h,100.99t/data=!3m4!1e1!3m2!1sfx1tp4l-VKSdxRAkHMgYXQ!2e0" target="_blank">118 E Main St, Louisville, KY</a></p>
+<p>Indatus <a href="https://www.google.com/maps/@38.255946,-85.750439,3a,75y,216.95h,100.99t/data=!3m4!1e1!3m2!1sfx1tp4l-VKSdxRAkHMgYXQ!2e0" target="_blank">118 E Main St, Louisville, KY</a></p>
 
 <p><strong>The schedule</strong></p>
 
