Added session facade talk

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ title: Laravel Louisville
 
 <p><strong>The schedule</strong></p>
 
+<h3 class="section-title">August Meetup &mdash; Aug. 27th, 2014</h3>
+
 <ul class="schedule">
     <li>
       <span class="time">6:00</span> Arrive, grab some pizza and a drink
@@ -27,9 +29,10 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">7:00</span>
-      <a href="">TBD</a>
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;Level up your Session Facade&rdquo;
     </li>
-    <li><span class="time">8:00</span> Open Discussion</li>
+    <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
 
 <aside class="meetup">
