--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@ title: Laravel Louisville
 
 <p><strong>The schedule</strong></p>
 
+<h3 class="section-title">September Meetup &mdash; Sept. 24th, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:00</span> Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      TBD
+    </li>
+    <li><span class="time">7:00</span> Open Discussion</li>
+</ul>
+
+<aside class="meetup">
+  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+</aside>
+
 <h3 class="section-title">August Meetup &mdash; Aug. 27th, 2014</h3>
 
 <ul class="schedule">
@@ -34,10 +51,6 @@ title: Laravel Louisville
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
-
-<aside class="meetup">
-  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
-</aside>
 
 <h3 class="section-title">July Meetup &mdash; Jul. 23rd, 2014</h3>
 
