--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
-      TBD
+      <a href="http://about.me/chris_flynn">Chris Flynn</a>
+      &ldquo;Laravel 5.0: An Intro&rdquo;
     </li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
