--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Laravel Louisville
 
 <p><strong>The schedule</strong></p>
 
-<h3 class="section-title">October Meetup &mdash; Oct. 17th, 2014</h3>
+<h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
 
 <ul class="schedule">
     <li>
