Archiving October meetup

--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@ title: Laravel Louisville
 
 <p><strong>The schedule</strong></p>
 
-<h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
-
 <ul class="schedule">
     <li>
       <span class="time">6:00</span> Arrive, grab some pizza and a drink
     </li>
     <li>
       <span class="time">6:30</span>
-      Dylan Buth
-      &ldquo;Migrations & Seeders&rdquo;
+      <a href="">Topic</a>
+      &ldquo;TBD&rdquo;
     </li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
@@ -34,16 +32,33 @@ title: Laravel Louisville
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
 
+<h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://twitter.com/dylanbuth">Dylan Buth</a>
+      &ldquo;Migrations &amp; Seeders&rdquo;
+      &mdash; <a href="http://slides.com/dylanbuth/migrations-and-seeders/live#/">Slides</a>
+    </li>
+    <li>
+      <span class="time">7:00</span>
+      <a href="https://twitter.com/brianwebb01">Brian Webb</a>
+      &ldquo;Scaling Data Storage&rdquo;
+      &mdash; <a href="https://drive.google.com/file/d/0B-pNV0P6pMu-dFJUUERDVHgzNE0/view?usp=sharing">Slides</a>
+      <a href="https://drive.google.com/file/d/0B-pNV0P6pMu-UVFkd181M0VBaFE/view?usp=sharing">Audio</a>
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
+
 <h3 class="section-title">September Meetup &mdash; Sept. 24th, 2014</h3>
 
 <ul class="schedule">
     <li>
-      <span class="time">6:00</span> Arrive, grab some pizza and a drink
-    </li>
-    <li>
       <span class="time">6:30</span>
-      <a href="http://about.me/chris_flynn">Chris Flynn</a>
+      <a href="https://twitter.com/BardoDev">Chris Flynn</a>
       &ldquo;Laravel 5.0: An Intro&rdquo;
+      &mdash; <a href="http://slides.com/chrisflynn-1/laravel-5-0-intro">Slides</a>
     </li>
     <li><span class="time">7:00</span> Open Discussion</li>
 </ul>
@@ -52,17 +67,16 @@ title: Laravel Louisville
 
 <ul class="schedule">
     <li>
-      <span class="time">6:00</span> Arrive, grab some pizza and a drink
-    </li>
-    <li>
       <span class="time">6:30</span>
-      <a href="http://about.me/chris_flynn">Chris Flynn</a>
+      <a href="https://twitter.com/BardoDev">Chris Flynn</a>
       &ldquo;Aspect Oriented Architecture in Laravel&rdquo;
+      &mdash; <a href="http://slides.com/chrisflynn-1/aspect-oriented-architecture-in-laravel">Slides</a>
     </li>
     <li>
       <span class="time">7:00</span>
       <a href="https://github.com/bkuhl">Ben Kuhl</a>
       &ldquo;Level up your Session Facade&rdquo;
+      &mdash; <a href="https://github.com/bkuhl/level-up-your-session-facade">Slides</a>
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
