--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@ title: Laravel Louisville
 
 <ul class="schedule">
     <li>
-      <span class="time">6:00</span> Arrive, grab some pizza and a drink
+      <span class="time">6:30</span>
+      Damien Russell
+      &ldquo;Service Providers&rdquo;
     </li>
     <li>
-      <span class="time">6:30</span>
-      <a href="">Topic</a>
-      &ldquo;TBD&rdquo;
+      <span class="time">7:00</span>
+      Thomas Bell
+      &ldquo;Using generics, in Laravel with HHVM&rdquo;
     </li>
-    <li><span class="time">7:00</span> Open Discussion</li>
+    <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
 
 <aside class="meetup">
