--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@ title: Laravel Louisville
 
 <ul class="schedule">
     <li>
+      <span class="time">6:00</span>
+      Pizza & Drinks
+    </li>
+    <li>
       <span class="time">6:30</span>
-      Damien Russell
-      &ldquo;Service Providers&rdquo;
+      Speaker TBD
     </li>
     <li>
       <span class="time">7:00</span>
-      Thomas Bell
-      &ldquo;Using generics, in Laravel with HHVM&rdquo;
+      Speaker TBD
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
@@ -33,6 +35,24 @@ title: Laravel Louisville
 <aside class="meetup">
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
+
+<h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:30</span>
+      Damien Russell
+      &ldquo;Service Providers&rdquo;
+      &mdash; <a href="http://slides.com/drussell/service-providers#/">Slides</a>
+    </li>
+    <li>
+      <span class="time">7:00</span>
+      Thomas Bell
+      &ldquo;Using generics, in Laravel with HHVM&rdquo;
+      &mdash; <a href="http://slides.com/thomasbell/deck#/">Slides</a>
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
 
 <h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
 
