--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Laravel Louisville
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
 
-<h3 class="section-title">October Meetup &mdash; Oct. 22nd, 2014</h3>
+<h3 class="section-title">November Meetup &mdash; Nov. 19th, 2014</h3>
 
 <ul class="schedule">
     <li>
