--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup</h3>
+<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup - Regional Holiday Party</h3>
 
 <p><strong>When is it?</strong></p>
 <p>{{ site.next_meetup | date: "%A, %B %-d, %Y" }} from 6:00 PM to 8:00 PM</p>
@@ -18,18 +18,16 @@ title: Laravel Louisville
 
 <ul class="schedule">
     <li>
-      <span class="time">6:00</span>
-      Pizza & Drinks
+      <span class="time">6:00 - 8:00</span>
+      Pizza & Drinks<br/>
+      Open Discussion<br/>
+      Door prizes:<br/>
+        <ul>
+            <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
+            <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
+            <li>More to come!</li>
+        </ul>
     </li>
-    <li>
-      <span class="time">6:30</span>
-      Speaker TBD
-    </li>
-    <li>
-      <span class="time">7:00</span>
-      Speaker TBD
-    </li>
-    <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
 
 <aside class="meetup">
