--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@ title: Laravel Louisville
 <ul class="schedule">
     <li>
       <span class="time">6:00 - 8:00</span>
-      Pizza & Drinks<br/>
-      Open Discussion<br/>
-      Door prizes:<br/>
+      <div>
+        Pizza & Drinks<br/>
+        Open Discussion<br/>
+        Door prizes:<br/>
         <ul>
             <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
             <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
             <li>More to come!</li>
         </ul>
+      </div>
     </li>
 </ul>
 
