--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup - Regional Holiday Party</h3>
+<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup - Regional Holiday Social</h3>
 
 <p><strong>When is it?</strong></p>
 <p>{{ site.next_meetup | date: "%A, %B %-d, %Y" }} from 6:00 PM to 8:00 PM</p>
