--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@ title: Laravel Louisville
 
 <ul class="schedule">
     <li>
+      <div class=
       <span class="time">6:00 - 8:00</span>
       <div>
-        Pizza & Drinks<br/>
-        Open Discussion<br/>
-        Door prizes:<br/>
+        Pizza & Drinks (provided by <a href="http://indatus.com">Indatus</a>), open discussion and door prizes:
         <ul>
             <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
             <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
