--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Laravel Louisville
 <ul class="schedule">
     <li>
       <span class="time">6:00 - 8:00</span>
-        Pizza & Drinks (provided by <a href="http://indatus.com">Indatus</a>), open discussion and door prizes:
+        Pizza & drinks (provided by <a href="http://indatus.com">Indatus</a>), open discussion and door prizes:
         <ul style="margin-left: 6em">
             <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
             <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
