--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ title: Laravel Louisville
         <ul style="margin-left: 6em">
             <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
             <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
+            <li>3mo extended trial for <a href="https://bugsnag.com">Bugsnag</a></li>
             <li>More to come!</li>
         </ul>
     </li>
