Added February meetup

--- a/index.html
+++ b/index.html
@@ -6,20 +6,50 @@ title: Laravel Louisville
 <p><strong>Who we are</strong></p>
 <p>We&rsquo;re a group of web developers and PHP programmers who enjoy building software with the Laravel framework. The goal of Laravel Louisville is to help build the software engineering community in Louisville by teaching each other how to write quality software in PHP.</p>
 
-<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup - Regional Holiday Social</h3>
+<h3 class="section-title">{{ site.next_meetup | date: "%B" }} Meetup</h3>
 
 <p><strong>When is it?</strong></p>
 <p>{{ site.next_meetup | date: "%A, %B %-d, %Y" }} from 6:00 PM to 8:00 PM</p>
 
 <p><strong>Where is it?</strong></p>
-<p>Indatus <a href="https://www.google.com/maps/@38.255946,-85.750439,3a,75y,216.95h,100.99t/data=!3m4!1e1!3m2!1sfx1tp4l-VKSdxRAkHMgYXQ!2e0" target="_blank">118 E Main St, Louisville, KY</a></p>
+<p>Indatus <a href="https://www.google.com/maps/place/Indatus/@38.255634,-85.750639,15z/data=!4m2!3m1!1s0x0:0xc0364e244fe06167" target="_blank">118 E Main St, Louisville, KY</a></p>
 
 <p><strong>The schedule</strong></p>
 
 <ul class="schedule">
     <li>
+      <span class="time">6:00</span>
+      Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      TBD
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
+
+<aside class="meetup">
+  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
+</aside>
+
+<h3 class="section-title">January Meetup &mdash; Jan. 28th, 2015</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:30</span>
+      Charles Griffin
+      &ldquo;Painless Roles and Permissions using Lock&rdquo;
+      &mdash; <a href="https://www.youtube.com/watch?v=Y11ovF7O4rw">Watch</a>
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
+
+<h3 class="section-title">December Meetup &mdash; Dec. 17th, 2014</h3>
+
+<ul class="schedule">
+    <li>
       <span class="time">6:00 - 8:00</span>
-        Pizza & drinks (provided by <a href="http://indatus.com">Indatus</a>), open discussion and door prizes:
+        Pizza &amp; drinks (provided by <a href="http://indatus.com">Indatus</a>), open discussion and door prizes:
         <ul style="margin-left: 6em">
             <li><a href="https://www.jetbrains.com/phpstorm/">PHPStorm</a> license ($99 value)</li>
             <li>1yr <a href="https://forge.laravel.com">Laravel Forge Plus</a> subscription ($240 value)</li>
@@ -28,10 +58,6 @@ title: Laravel Louisville
         </ul>
     </li>
 </ul>
-
-<aside class="meetup">
-  <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
-</aside>
 
 <h3 class="section-title">November Meetup &mdash; Nov. 19th, 2014</h3>
 
