--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
-      TBD
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;<a href="https://github.com/Indatus/guardian">Indatus/Guardian</a>&rdquo;
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
