--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
-      <a href="https://github.com/bkuhl">Ben Kuhl</a>
-      &ldquo;<a href="https://github.com/Indatus/guardian">Indatus/Guardian</a>&rdquo;
+      TBD
     </li>
     <li><span class="time">7:30</span> Open Discussion</li>
 </ul>
@@ -32,6 +31,22 @@ title: Laravel Louisville
 <aside class="meetup">
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
+
+<h3 class="section-title">February Meetup &mdash; Feb. 25th, 2014</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:00</span>
+      Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;<a href="https://github.com/Indatus/guardian">Indatus/Guardian</a>&rdquo;
+      &mdash; <a href="https://www.youtube.com/watch?v=WrIgLr9i5us">Watch</a>
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
 
 <h3 class="section-title">January Meetup &mdash; Jan. 28th, 2015</h3>
 
