Adding queue talk from Ben.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;<span>Queues: Why, When and How</span>&rdquo;
+    </li>
+    <li>
+      <span class="time">6:45</span>
       TBD
     </li>
-    <li><span class="time">7:30</span> Open Discussion</li>
+    <li>
+      <span class="time">7:30</span>
+      Open Discussion
+    </li>
 </ul>
 
 <aside class="meetup">
