Adding in talk for Damien

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:45</span>
-      TBD
+      <a href="https://github.com/Olofguard">Damien Russell</a>
+      &ldquo;<span>Laravel Queues &amp; High Availability</span>&rdquo;
     </li>
     <li>
       <span class="time">7:30</span>
