--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@ title: Laravel Louisville
     </li>
     <li>
       <span class="time">6:30</span>
-      <a href="https://github.com/bkuhl">Ben Kuhl</a>
-      &ldquo;<span>Queues: Why, When and How</span>&rdquo;
+      TBD
     </li>
     <li>
-      <span class="time">6:45</span>
-      <a href="https://github.com/Olofguard">Damien Russell</a>
-      &ldquo;<span>Laravel Queues &amp; High Availability</span>&rdquo;
+      <span class="time">7:00</span>
+      TBD
     </li>
     <li>
       <span class="time">7:30</span>
@@ -41,7 +39,27 @@ title: Laravel Louisville
   <a class="btn" href="http://www.meetup.com/Laravel-Louisville">Join us!</a>
 </aside>
 
-<h3 class="section-title">February Meetup &mdash; Feb. 25th, 2014</h3>
+<h3 class="section-title">March Meetup &mdash; Mar. 25th, 2015</h3>
+
+<ul class="schedule">
+    <li>
+      <span class="time">6:00</span>
+      Arrive, grab some pizza and a drink
+    </li>
+    <li>
+      <span class="time">6:30</span>
+      <a href="https://github.com/bkuhl">Ben Kuhl</a>
+      &ldquo;<span>Queues: Why, When and How</span>&rdquo;
+    </li>
+    <li>
+      <span class="time">6:45</span>
+      <a href="https://github.com/Olofguard">Damien Russell</a>
+      &ldquo;<span>Laravel Queues &amp; High Availability</span>&rdquo;
+    </li>
+    <li><span class="time">7:30</span> Open Discussion</li>
+</ul>
+
+<h3 class="section-title">February Meetup &mdash; Feb. 25th, 2015</h3>
 
 <ul class="schedule">
     <li>
